# JSON-Search-Engine

./: CMakeLists.txt  ClassInfo.md  DSTree.h  README.md  documentation.md  main.cpp  rapidJSONExample.cpp  test_DSTree.cpp  test_DocParser.cpp  test_QP.cpp  test_system.cpp
CleanerClass/: Cleaner.h
CleanerClass/stemmer/: porter2_stemmer.cpp  porter2_stemmer.h
CleanerClass/stemmer/util/: hash.h  string_view.h
DocumentParser/: DocumentParser.cpp  DocumentParser.h
IndexHandler/: IndexHandler.cpp  IndexHandler.h
Memory/: OrganizationTree.txt  PersonTree.txt  UUID_PathMap.txt  UUID_WordCountMap.txt  WordTree.txt
QueryProcessor_And_UI/: QueryProcessor.cpp  QueryProcessor.h
sample_data/: news_0029540.json  news_0029542.json  news_0029545.json  news_0029546.json
sample_data/coll_2/: news_0064572.json
